# mcp-arch

./: README.md  TODOs.md  test.sh
agent/: Cargo.toml
agent/src/: agent.rs  lib.rs  main.rs  types.rs
agent/src/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
