[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
clap = { version = "4.5.38", features = ["derive", "env"] }
env_logger = "0.11.8"
log = "0.4.27"
mcpr = "0.2.3"
ollama-rs = "0.3.1"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
