[package]
name = "mcp-arch-client"
version = "0.1.0"
edition = "2021"
description = "MCP client for mcp-arch project with SSE transport"

[dependencies]
# For local development, use path dependency:
# mcpr = { path = "../.." }
# For production, use version from crates.io:
mcpr = "0.2.3"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
ollama-rs = "0.3.1"
